MCP3008Comm unit test + refactoring

--- a/src/audio_processing_examples/plot/audio_plot.ipynb
+++ b/src/audio_processing_examples/plot/audio_plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,116 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-3.18596e+01 -9.38066e-04 -3.13254e-03  6.19797e-04 -2.76125e-03\n",
-      " -2.52611e-03  1.44859e-03 -3.93716e-03 -2.63932e-03 -1.88432e-03\n",
-      " -2.17967e-03 -3.11656e-03 -1.75414e-04 -3.69291e-03 -5.97641e-04\n",
-      " -1.78412e-03 -3.82969e-03 -4.21624e-03 -2.69083e-03 -3.33348e-03\n",
-      " -2.42704e-03 -2.34426e-03 -3.20469e-03 -4.34565e-03 -1.94370e-03\n",
-      "  8.89021e-05 -2.44607e-03 -2.79634e-03 -1.98862e-03 -3.68361e-03\n",
-      " -2.59092e-03 -2.99605e-03 -4.73158e-03 -2.42195e-03 -4.13274e-03\n",
-      " -3.55341e-03 -1.61792e-03 -1.41782e-03 -3.10329e-03 -1.02771e-03\n",
-      " -4.53307e-03 -3.03555e-03 -3.92145e-03 -1.92008e-03 -3.11114e-03\n",
-      " -2.57277e-03 -3.46565e-03 -1.57113e-03 -7.21948e-04 -3.29338e-03\n",
-      " -1.48831e-04 -2.44283e-03 -2.86125e-03 -2.59737e-03 -2.12332e-03\n",
-      " -4.56798e-03 -2.51538e-03 -4.53832e-03 -3.35328e-03 -3.10234e-03\n",
-      " -4.87507e-03 -3.87410e-03 -4.78712e-03 -4.44857e-03 -6.72187e-03\n",
-      " -7.33103e-03 -3.55182e-03 -3.52405e-03 -3.76630e-03 -5.11847e-03\n",
-      " -4.42457e-03 -7.42369e-03 -6.38985e-03 -6.11057e-03 -7.11140e-03\n",
-      " -5.91088e-03 -7.88664e-03 -8.69711e-03 -9.57001e-03 -9.87235e-03\n",
-      " -1.15168e-02 -1.68580e-02 -2.04654e-02 -2.63734e-02 -4.01721e-02\n",
-      " -9.59957e-02  4.79681e-01  5.34236e-02  2.82771e-02  2.11165e-02\n",
-      "  1.40466e-02  9.59518e-03  9.00476e-03  8.89414e-03  7.29081e-03\n",
-      "  8.29235e-03  6.16759e-03  4.35531e-03  4.16600e-03  3.24111e-03\n",
-      "  4.08220e-03  4.60987e-03  2.60614e-03  3.86865e-03 -3.61076e-04\n",
-      "  4.97569e-03  2.64743e-03  1.18347e-03  2.82004e-03  2.15262e-03\n",
-      "  2.43853e-03  1.22640e-03  2.46073e-03  1.69711e-03  1.32310e-03\n",
-      "  3.40039e-03  1.97625e-03 -1.75945e-05  7.36823e-04 -1.39633e-04\n",
-      "  1.43869e-03  1.53421e-03 -2.65283e-04  1.09393e-03 -1.44602e-03\n",
-      "  2.33267e-03 -5.83370e-04  3.39394e-04 -2.94723e-04  1.82125e-03\n",
-      "  5.15512e-04  1.72916e-03  1.00135e-03  3.16997e-04  4.07781e-04\n",
-      " -5.71344e-04  6.62105e-04  1.40568e-03  1.13355e-04  6.51517e-04\n",
-      "  9.39408e-04 -1.77449e-04  7.83323e-04 -1.69760e-04  5.75583e-04\n",
-      "  1.19123e-04  1.87395e-03 -3.88125e-04 -7.88716e-04 -8.94930e-04\n",
-      " -2.61932e-04 -1.07181e-03  5.05012e-04 -1.12595e-04 -1.45456e-03\n",
-      "  1.36705e-04 -7.48971e-04 -1.87293e-03  3.12867e-05  5.72584e-04\n",
-      " -7.85877e-04 -5.53859e-05  1.34694e-03 -1.83614e-03 -2.14107e-03\n",
-      " -6.63330e-04 -1.43739e-03 -1.03840e-03  5.62148e-04  9.51543e-04\n",
-      " -1.17300e-03 -2.49848e-03  6.25620e-03  1.12645e-03  1.04100e-03\n",
-      "  7.78130e-04  1.32586e-03  1.91829e-03  8.49964e-04  4.50040e-04\n",
-      "  4.29528e-04 -2.55539e-04  1.14419e-03  2.05806e-04 -1.08147e-04\n",
-      " -5.77966e-04 -7.20414e-04  1.47283e-03  8.27252e-04 -4.80387e-04\n",
-      " -9.57610e-04 -5.05837e-04  1.27747e-03 -4.86344e-04 -5.82732e-04\n",
-      " -1.94320e-03  1.35098e-03 -8.25112e-04  1.25884e-03 -3.12583e-04\n",
-      " -1.34031e-03 -6.59482e-04  5.03593e-04 -9.94665e-04 -1.95549e-04\n",
-      " -2.57913e-04 -4.48691e-05  1.28765e-03  6.14431e-04 -6.61379e-04\n",
-      "  4.80667e-04 -1.04187e-03  4.33085e-04  1.50024e-03  9.25834e-04\n",
-      " -1.20076e-03 -1.35582e-03  5.27783e-04 -6.01058e-04 -2.46272e-04\n",
-      " -1.96950e-03  1.99916e-03  1.53589e-03  9.13310e-04  7.65979e-04\n",
-      " -2.25301e-04 -9.05418e-04  9.79681e-04 -1.77203e-03 -6.69496e-04\n",
-      " -5.75116e-04 -1.19704e-03 -9.83897e-04 -7.43997e-04 -7.65043e-04\n",
-      " -1.06326e-03  1.35777e-03  9.77691e-04  1.55030e-03 -2.15874e-04\n",
-      " -1.17907e-03 -6.30937e-04 -1.50630e-03  2.55465e-04 -1.90593e-04\n",
-      " -3.70506e-04  1.78685e-03  3.53258e-04  1.17252e-04 -3.46094e-04\n",
-      "  9.89558e-04  1.85800e-03  6.18073e-04  1.51000e-03 -5.54834e-04\n",
-      " -1.05416e-03  2.79000e-04 -2.38545e-04  2.07630e-03 -1.28190e-03\n",
-      " -1.68907e-04 -6.79106e-04 -1.71403e-03  1.50633e-04 -1.40408e-04\n",
-      " -7.42746e-04  1.29018e-03 -7.09271e-04  1.43894e-03  1.02845e-03\n",
-      " -1.56316e-03 -1.23221e-03 -1.56166e-03  7.42636e-04  3.22730e-04\n",
-      " -1.43100e-04  1.71092e-03  1.89071e-03 -1.33776e-03  8.75838e-04\n",
-      " -1.31004e-03 -4.08884e-04 -1.45022e-04  8.11996e-04  5.35343e-04\n",
-      " -1.99250e-03  3.17324e-04  2.35884e-04 -2.41157e-03 -2.43744e-03\n",
-      "  4.25209e-04 -5.30888e-04 -1.74767e-03 -1.82693e-03 -9.55178e-04\n",
-      "  5.63007e-04 -3.09202e-04  1.72670e-04 -4.49033e-04 -1.39659e-03\n",
-      " -2.51681e-03  1.53152e-03  2.13215e-03  1.49576e-03  4.43245e-04\n",
-      " -1.25151e-03 -5.76365e-04  7.71653e-05 -1.72751e-03  9.31465e-04\n",
-      " -5.00275e-05 -2.47063e-03 -3.73073e-03 -3.96483e-04 -5.40819e-04\n",
-      "  7.56725e-04 -1.40711e-03  1.49847e-03  1.40077e-05 -1.26021e-03\n",
-      " -1.03644e-03 -9.20102e-04 -1.79409e-03 -7.73774e-04 -7.68237e-04\n",
-      " -9.47464e-04 -4.34064e-04 -5.01858e-04 -3.20583e-03 -8.90755e-05\n",
-      " -1.37073e-03 -1.02329e-03  1.16284e-03 -5.53382e-04 -1.55207e-03\n",
-      " -7.73004e-04  9.49446e-04  2.12065e-03 -4.14814e-04  8.30373e-04\n",
-      "  3.47527e-04  5.61349e-04 -2.86988e-03 -2.32444e-03  8.26184e-04\n",
-      "  1.46220e-03  3.11139e-04 -8.25449e-04  1.53459e-04  4.92911e-04\n",
-      "  8.44260e-04 -8.07125e-04 -1.54596e-03 -5.12067e-04  4.82475e-04\n",
-      " -8.72294e-04 -3.47717e-04  5.85962e-04 -9.97283e-04 -8.29189e-04\n",
-      "  3.21072e-04  4.05882e-04  2.01224e-04  7.96903e-05 -1.73350e-03\n",
-      " -1.10257e-03 -4.90151e-04 -5.79212e-04 -8.12860e-04  2.61322e-04\n",
-      " -1.10041e-05 -6.99765e-04 -6.41958e-04 -7.78679e-04  1.27419e-04\n",
-      " -1.00589e-03 -1.39470e-03 -2.30687e-04 -1.08701e-03  5.31229e-04\n",
-      "  9.26337e-04 -2.73342e-03 -2.42423e-04 -1.85316e-03  7.44723e-04\n",
-      " -3.62245e-04 -1.16729e-03  2.25801e-03 -3.11978e-04 -1.09131e-03\n",
-      "  1.64461e-03 -2.58282e-03  1.18446e-03 -4.28044e-04  3.24872e-04\n",
-      " -5.20751e-05 -7.00896e-04 -1.24246e-03  1.79145e-04  1.04187e-03\n",
-      "  1.56891e-03 -9.22845e-04 -1.67257e-03 -3.35141e-04 -6.52444e-04\n",
-      " -5.00615e-04 -1.35095e-03 -2.14010e-03 -6.42839e-04 -1.35989e-03\n",
-      " -1.20588e-03 -1.34840e-03  4.79869e-04 -5.04034e-05 -6.15824e-04\n",
-      " -4.78068e-04 -3.57985e-06 -2.24931e-03 -1.11845e-04  8.83816e-04\n",
-      " -3.11202e-05 -1.43443e-03 -2.83248e-03 -1.03991e-03 -1.79663e-03\n",
-      " -1.23482e-03  2.40773e-03  6.88945e-04  2.78944e-03 -8.37704e-04\n",
-      " -6.02869e-04 -1.28516e-03 -1.47780e-03 -4.61781e-04  1.15703e-04\n",
-      " -1.02340e-03 -1.36370e-03 -1.14886e-03 -8.06604e-04  5.02888e-04\n",
-      " -1.07274e-03 -1.91827e-03  1.28967e-04  1.22581e-03 -2.34481e-04\n",
-      " -1.32441e-03 -4.87622e-04 -7.53759e-04  7.28442e-05 -1.76129e-03\n",
-      " -7.57961e-04  1.81827e-03 -5.92306e-04  1.05139e-03 -2.33057e-04\n",
-      " -1.27634e-03 -1.97833e-03  7.36692e-04  2.22015e-04 -1.16571e-03\n",
-      "  1.82532e-04 -3.30750e-04 -1.03332e-03  7.56632e-04  1.97348e-03\n",
-      "  5.73441e-04  1.97627e-03  1.00485e-03 -1.25699e-03 -1.34741e-03\n",
-      " -3.43084e-04  2.18298e-03  8.06803e-04  1.14285e-04 -1.24462e-04\n",
-      " -7.02211e-04 -1.95240e-03 -3.17663e-04 -3.47453e-04 -1.79608e-03\n",
-      "  2.24990e-04 -2.26965e-03 -1.27583e-04 -1.70882e-03 -1.35475e-03\n",
-      "  9.06632e-04 -7.77883e-04 -2.02592e-04 -6.92825e-04 -3.69593e-05\n",
-      " -6.17808e-04 -5.14583e-04 -3.94214e-04 -1.61168e-03 -1.29474e-03\n",
-      " -5.49376e-04  1.15616e-03  1.23392e-03  1.99761e-04  2.05099e-04\n",
-      " -1.88391e-04  2.12794e-04  1.05047e-03 -2.34503e-03  6.72025e-04\n",
-      " -7.94255e-04 -1.14051e-03  6.43034e-04 -7.63796e-04  1.86780e-04\n",
-      " -2.16798e-04  1.30247e-03 -9.28000e-04]\n"
+     "ename": "OSError",
+     "evalue": "../samples/sine_amplitudes.txt not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-19510f6c4799>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# load FFT data amplitudes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../samples/sine_amplitudes.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mffta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mn_frames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m513\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows)\u001b[0m\n\u001b[1;32m    979\u001b[0m             \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    980\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_string_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 981\u001b[0;31m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_datasource\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    982\u001b[0m             \u001b[0mfencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'encoding'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    983\u001b[0m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdestpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 269\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnewline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[1;32m    621\u001b[0m                                       encoding=encoding, newline=newline)\n\u001b[1;32m    622\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 623\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s not found.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    624\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: ../samples/sine_amplitudes.txt not found."
      ]
     }
    ],
